infrastructure/k8s/kafka-statefulset.yml
# kafka-statefulset.yml
# Définition de Kafka uniquement, Zookeeper est défini dans son propre fichier
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: microservices
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      name: kafka
      targetPort: 9092
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: microservices
  labels:
    app: kafka
spec:
  serviceName: "kafka"
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          ports:
            - containerPort: 9092
              name: kafka
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "768Mi"
              cpu: "200m"
