infrastructure/k8s/order-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: feature-frontend-k8s-deployment
  labels:
    app: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: wtek01/order-service:0.3.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          resources:
            limits:
              memory: "384Mi"
              cpu: "300m"
            requests:
              memory: "128Mi"
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: feature-frontend-k8s-deployment
  labels:
    app: order-service
spec:
  selector:
    app: order-service
  ports:
    - port: 8082
      targetPort: 8082
      name: http
