infrastructure/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: feature-frontend-k8s-deployment
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: ${FRONTEND_HOST}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ${FRONTEND_SERVICE}
                port:
                  number: 80
    - host: ${API_HOST}
      http:
        paths:
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: ${USER_SERVICE}
                port:
                  number: 8081
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: ${ORDER_SERVICE}
                port:
                  number: 8082
